<resources>
    <string name="app_name">دليل صيدليات الأردن</string>
    <string name="pharmacy_name">اسم الصيدلية :</string>
    <string name="enter_pharmacy_name">أدخل إسم الصيديلة</string>
    <string name="enter_address">أدخل العنوان</string>
    <string name="pharmacy_location">العنوان :</string>
    <string name="pharmacy_email">البريد الإلكتروني :</string>
    <string name="select_city">إختر المدينة</string>
    <string name="pharmacy_contact">رقم الهاتف  :</string>
    <string name="fax">رقم الفاكس  :</string>
    <string name="not_exists">لا يوجد</string>
    <string name="share_pharmacy_details">إرسال البيانات</string>
    <string name="back">رجوع</string>
    <string name="added">تم إضافة</string>
    <string name="remove">تم حذف</string>
    <string name="to_fav">إلى قائمة الصيدليات المفضلة</string>
    <string name="from_fav">من قائمة الصيدليات المفضلة</string>
    <string name="confirm_remove_fav_title">تأكيد حذف من الفضلة</string>
    <string name="confirm_remove_fav">من هل أنت متأكد من حذف الصيدلية من القائمة المفضلة</string>
    <string name="ok">نعم</string>
    <string name="no">لا</string>

    <string name="share_desc">دليل صيدليات الأردن هو برنامج يعطيك خدمة الإستعلام عن أي صيدلية في الأردن بدون إنترنت</string>
    <string name="city_name">المدينة :</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="doSearch">ابحث</string>
    <string name="suggestionsMail">javawy87@gmail.com</string>
    <string name="developerName">مصمم البرنامج : رامي نصار</string>
    <string name="main_page">الصفحة الرئيسية</string>
    <string name="nav_favorite">قائمتي المفضلة</string>
    <string name="rate_app">تقييم التطبيق</string>
    <string name="share_app">نشر التطبيق</string>
    <string name="developer">مطور التطبيق</string>
    <string name="about">عن التطبيق</string>
    <string name="close">خروج</string>
    <string name="notExists">لا يوجد صيدليات ضمن معايير البحث المدخلة</string>
    <string name="favNotExists">يمكنك إضافة صيدليات ضمن اللائحة المفضلة عن طريق الضغط على اشارة النجمة</string>
    <string name="about_app">صيدليات الأردن هو برنامج يحتوي على جميع البيانات التي يحتاجها الشخص للتواصل مع أي صيدلية في الأردن دون الحاجة للاتصال بالإنترنت.</string>

    <string-array name="cities_values">
        <item>إختر المدينة</item>
        <item>عمان</item>
        <item>الزرقاء</item>
        <item>اربد</item>
        <item>الكرك</item>
        <item>البلقاء</item>
        <item>الطفيلة</item>
        <item>العقبة</item>
        <item>المفرق</item>
        <item>جرش</item>
        <item>رمثا</item>
        <item>عجلون</item>
        <item>مادبا</item>
        <item>معان</item>
    </string-array>
    <string name="title_activity_add_mob">AddMobActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638

        ca-app-pub-3940256099942544/1033173712

    <!- -->
    <string name="add_mob_unit_id">ca-app-pub-3517273960705854/3793773308</string>

</resources>
