<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_page"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_app" />
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/ic_menu_developer"
            android:title="@string/developer" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info_details"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_menu_close"
            android:title="@string/close" />
    </group>
</menu>