<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javawy.jordanpharmacyguide.activities.MainActivity"
    tools:showIn="@layout/app_bar_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dip"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:inputType="text"
            android:maxLines="1"
            android:text="@string/pharmacy_name"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/pharmacyNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/enter_pharmacy_name"
            android:textColorHint="@color/gray"
            android:layout_gravity="right"
            android:maxLength="100"
            android:text="" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/city_name"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:background="@drawable/custom_spinner_background"
            android:spinnerMode="dropdown"
            android:id="@+id/citiesSpinner"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:entries="@array/cities_values"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="@string/pharmacy_location"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/enter_address"
            android:textColorHint="@color/gray"
            android:imeOptions="actionGo"
            android:privateImeOptions="Go"
            android:layout_gravity="right"
            android:maxLength="200"
            android:text="" />
        <!--ProgressBar
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar1">
        </ProgressBar-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:onClick="doSearch"
            android:background="@drawable/button_shape"
            android:layout_marginTop="10dip"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:text="@string/doSearch" />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:gravity="center" >

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />
        </RelativeLayout>

        <TextView
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text=""/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/add_mob_unit_id">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</ScrollView>