<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_developer"
    tools:context="com.javawy.jordanpharmacyguide.activities.DeveloperActivity"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/developerName"/>

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/suggestionsMail"/>

        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="+971 50 9287537"/>

        <TextView
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text=""/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/add_mob_unit_id">
        </com.google.android.gms.ads.AdView>

</LinearLayout>